hphp/hack/test/typecheck/expression_trees/if.php.like_types.exp
File "if.php", line 6, characters 53-53:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 19, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "if.php", line 6, characters 65-65:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 19, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "if.php", line 10, characters 14-14:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 19, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "if.php", line 12, characters 14-14:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 19, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "if.php", line 14, characters 14-14:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 19, characters 6-43:
  But got `dynamic` because it is an unenforceable type
